Fix z-index

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body.game-mood-negative {
   background: url(/virus-bg.png) no-repeat;
   background-size: cover;
   position: absolute;
-
+  z-index: -1;
 }
 .virus-bg--middle-left {
  width: 78px; height: 78px;
